// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPage render snapshots 📸 LandingPage should match snap shot login 1`] = `
<div
  className="page__landing"
>
  <nav
    className="navbar navbar-expand-sm navbar-light"
  >
    <ul
      className="navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Billsnap Logo
        </a>
      </li>
    </ul>
    <ul
      className="ml-auto navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          About us
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Features
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          onClick={[Function]}
        >
          Contact us
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="page__content"
  >
    <div
      className="title"
    >
      <div
        className="title__row"
      >
        <h3
          className="title__title"
        >
          Welcome to Billsnap
        </h3>
      </div>
      <div
        className="title__row title__text"
      >
        <p>
          BillSnap is all about snapping away full bills into dust. The goal is to facilitate the process of splitting bills with roommates, friends & family.
        </p>
      </div>
      <div
        className="title__row"
      >
        <button
          className="title__button btn btn-primary btn-md btn-pill"
          onClick={[Function]}
        >
          How it works
        </button>
      </div>
    </div>
    <div>
      <LoginForm
        history={
          Object {
            "push": [MockFunction],
          }
        }
        setFormType={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`LandingPage render snapshots 📸 LandingPage should match snap shot register 1`] = `
<div
  className="page__landing"
>
  <nav
    className="navbar navbar-expand-sm navbar-light"
  >
    <ul
      className="navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Billsnap Logo
        </a>
      </li>
    </ul>
    <ul
      className="ml-auto navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          About us
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Features
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          onClick={[Function]}
        >
          Contact us
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="page__content"
  >
    <div
      className="title"
    >
      <div
        className="title__row"
      >
        <h3
          className="title__title"
        >
          Welcome to Billsnap
        </h3>
      </div>
      <div
        className="title__row title__text"
      >
        <p>
          BillSnap is all about snapping away full bills into dust. The goal is to facilitate the process of splitting bills with roommates, friends & family.
        </p>
      </div>
      <div
        className="title__row"
      >
        <button
          className="title__button btn btn-primary btn-md btn-pill"
          onClick={[Function]}
        >
          How it works
        </button>
      </div>
    </div>
    <div>
      <RegisterForm
        history={
          Object {
            "push": [MockFunction],
          }
        }
        setFormType={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`LandingPage render snapshots 📸 LandingPage should match snap shot when user already logged in i.e: redirect 1`] = `
<div
  className="page__landing"
>
  <nav
    className="navbar navbar-expand-sm navbar-light"
  >
    <ul
      className="navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Billsnap Logo
        </a>
      </li>
    </ul>
    <ul
      className="ml-auto navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          About us
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Features
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          onClick={[Function]}
        >
          Contact us
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="page__content"
  >
    <div
      className="title"
    >
      <div
        className="title__row"
      >
        <h3
          className="title__title"
        >
          Welcome to Billsnap
        </h3>
      </div>
      <div
        className="title__row title__text"
      >
        <p>
          BillSnap is all about snapping away full bills into dust. The goal is to facilitate the process of splitting bills with roommates, friends & family.
        </p>
      </div>
      <div
        className="title__row"
      >
        <button
          className="title__button btn btn-primary btn-md btn-pill"
          onClick={[Function]}
        >
          How it works
        </button>
      </div>
    </div>
    <div>
      <LoginForm
        history={
          Object {
            "push": [MockFunction],
          }
        }
        setFormType={[Function]}
      />
    </div>
  </div>
</div>
`;
